# asset-watcher

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-test.yml  build-production.yml  build-staging.yml
src/: main.rs
src/adapters/: rpc.rs
src/entities/: auth.rs  conditional_vaults.rs  deposits.rs  errors.rs  markets.rs  mod.rs  token_acct_balances.rs  token_accts.rs  tokens.rs  transactions.rs
src/entrypoints/: mod.rs
src/entrypoints/events/: mod.rs  rpc_token_acct_updates.rs  setup.rs  token_accts_insert.rs  token_accts_status_update.rs  transactions_insert.rs
src/entrypoints/http/: mod.rs  post_watch_token_acct.rs  routes.rs
src/entrypoints/jobs/: mod.rs  transaction_indexing.rs
src/events/: rpc_token_acct_updates.rs  token_accts_insert.rs  transactions_insert.rs
src/jobs/: transaction_indexing.rs
src/services/: auth.rs  balances.rs  balances_handler.rs  deposits.rs  liquidity.rs  liquidity_adding.rs  liquidity_providing.rs  liquidity_removing.rs  merge_conditionals_for_underlying.rs  mod.rs  new_mint.rs  new_mint_handlers.rs  new_mint_test.rs  redeem_conditionals.rs  swaps.rs  transactions.rs
