[package]
name = "asset-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
deadpool-diesel = {version="0.6.1", features=["postgres"]}
diesel = {version= "2.1.6", features=["postgres"]}
dotenv = "0.15.0"
futures-util = "0.3.30"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = {version="0.1.3", features=["tokio"]}
serde_json = "1.0.117"
tokio = {version="1.37.0", features=["full"]}
tokio-tungstenite = {version="0.21.0", features=["native-tls", "connect"]}
url = "2.5.0"
