[package]
name = "asset-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
bs58 = "0.5.1"
deadpool = "0.12.1"
deadpool-diesel = {version="0.6.1", features=["postgres"]}
diesel = {version= "2.1.6", features=["postgres", "chrono", "numeric"]}
dotenv = "0.15.0"
futures-util = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = {version="0.1.3", features=["tokio"]}
serde_json = "1.0.117"
solana-account-decoder = "1.18.15"
solana-client = "1.18.14"
solana-program = "1.18.14"
spl-token = "4.0.0"
solana-sdk = "1.18.15"
tokio = {version="1.37.0", features=["full"]}
tokio-tungstenite = {version="0.21.0", features=["native-tls", "connect"]}
url = "2.5.0"
serde = "1.0.203"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
futures-channel = "0.3.30"
futures = "0.3.30"
chrono = "0.4.38"
reqwest = {version="0.12.0", features=["json"]}
warp = "0.3.7"
bytes = "1.1.0"
serde_urlencoded = "0.7.1"
env_logger = "0.11.3"
bigdecimal = "0.4.6"
